--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "Act of Rejection";
+  src: url("./static/Act_Of_Rejection.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.stroketext {
+  color: white;
+  font-weight: 400;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  letter-spacing: 2px;
+  text-shadow: -1px 1px black, 1px -1px black, -1px 1px black, 1px 1px black
+}
+
+.gradient-text {
+  background: linear-gradient(180deg, #DE2A2F 0%, #EF5256 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.third-section {
+  background: linear-gradient(90deg, #EC3339 0%, #BB1117 100%);
+}
+
+.fifth-section {
+  background: linear-gradient(180deg, #2C2A2A 0%, #000 100%);
+}
+
+.second-stroketext {
+  color: black;
+  -webkit-text-stroke: 1px #fff;
+ 
+}
+
+.eigth-section {
+  background: linear-gradient(97deg, #3B3B3B 3.61%, #000 63.2%);
+}
+
+.features{
+  background: linear-gradient(90deg, #EC3339 0%, #BB1117 100%);
 }
